<resources>
    <string name="app_name">ARt Gal</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_reference_image">Get Reference Image</string>
    <string name="get_augmented_obj">Get Augmented Object</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="upload_marker">Upload Marker</string>
    <string name="view_markers">View Markers</string>
    <string name="submit">Submit</string>
    <string name="open_ar">Open AR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key"> AIzaSyA8saltTu4FA9cR-1dwxIhs1GJo9pncKxM</string>
    <string name="marker_map">Marker Map</string>
    <string name="open_maps">Open Maps</string>
    <string name="done">Done</string>
    <string name="mime_type_jpeg">image/jpeg</string>
    <string name="mime_type_png">image/png</string>
    <string name="type_images">image/*</string>
    <string name="type_3d_models">application/octet-stream</string>
    <string name="only_glb_assets">Only .glb assets</string>
    <string name="reference_images_ref">referenceImages/</string>
    <string name="augmented_object_ref">augmentedObjects/</string>
    <string name="content">content</string>
    <string name="flag">flag</string>
    <string name="uploaded_markers_activity">UploadedMarkers</string>
    <string name="new_marker_uid">newMarkerUid</string>
    <string name="new_marker_latlng">newMarkerLatLng</string>
    <string name="user_marker_uid">userMarkerUid</string>
    <string name="clicked_marker_uid">clickedMarkerUid</string>
    <string name="deleted_marker_uid">deletedMarkerUid</string>
    <string name="art_gal">/ARtGal</string>
    <string name="jpeg">jpeg</string>
    <string name="jpg">jpg</string>
    <string name="png">png</string>
    <string name="main_activity">com.fbu.pbluc.artgal.MainActivity</string>
    <string name="add_marker_activity">com.fbu.pbluc.artgal.AddMarkerActivity</string>
    <string name="marker_details_activity">com.fbu.pbluc.artgal.MarkerDetailsActivity</string>
    <string name="user_uid_editing_marker">userUidFromEditingMarker</string>
    <string name="marker_uid_editing_marker">currentEditingMarkerUid</string>
    <string name="edited_viewed_marker">editedViewedMarker</string>
    <string name="change_radius">Change Radius</string>
    <string name="miles"> miles</string>
    <string name="ar_core_user_privacy_disclosure"><![CDATA[This application runs on <a href="https://play.google.com/store/apps/details?id=com.google.ar.core">Google Play Services for AR</a> (ARCore), which is provided by Google LLC and governed by the <a href="https://policies.google.com/privacy">Google Privacy Policy</a>.]]></string>
    <string name="feed">Feed</string>
    <string name="marker_detail_lat_lng">detailedMarkerLatLng</string>

</resources>