<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="55dp"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/tvLogin"
        android:layout_width="2500dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_transparent_background"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/tvLogin"
        android:layout_marginTop="80dp"
        android:textColorHighlight="@color/purple_500"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textColorHighlight="@color/purple_500"
        android:layout_below="@id/etEmail"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/etPassword"
        android:text="@string/login"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_below="@id/btnLogin"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:clickable="true"
            android:text="Create account"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayoutContainer"
        android:layout_marginTop="100dp"
        android:visibility="invisible" />

</RelativeLayout>